# pico_waltering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  u8g2_import.cmake  引脚定义.txt
watering/: CMakeLists.txt  FreeRTOSConfig.h  main.c
watering/app/inc/: display_oled.h  input_handler.h  pump_runner.h
watering/app/src/: display_oled.c  input_handler.c  pump_runner.c
watering/common/inc/: types.h
watering/common/src/: log.c
watering/hal/inc/: hal_input.h  hal_pump.h
watering/hal/src/: hal_input.c  hal_pump.c
watering/inc/: log.h
watering/src/: log.c
